change CMAKE_SOURCE_DIR -> CMAKE_CURRENT_SOURCE_DIR

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,23 +91,23 @@ endfunction(setup_target_simple)
 # --------------------------- Third Party Libraries ----------------------------
 # ------------------------------------------------------------------------------
 
-set(IMGUI_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/third_party/imgui
+set(IMGUI_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui
                        /usr/local/include)
 
 # For examples
 if (BUILD_EXAMPLE)
     # GL3W
     add_library(gl3w ${LINK_TYPE}
-        ${CMAKE_SOURCE_DIR}/third_party/imgui/examples/libs/gl3w/GL/gl3w.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/examples/libs/gl3w/GL/gl3w.c
     )
     if (APPLE)
         SET_TARGET_PROPERTIES(gl3w PROPERTIES LINK_FLAGS "-framework CoreFoundation")
     endif()
-    setup_target_simple(gl3w ${CMAKE_SOURCE_DIR}/third_party/imgui/examples/libs/gl3w "")
+    setup_target_simple(gl3w ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/examples/libs/gl3w "")
     list(APPEND FASE_LIBRARY gl3w)
     list(APPEND IMGUI_LIBRARY gl3w)
 
-    list(APPEND FASE_INCLUDE ${CMAKE_SOURCE_DIR}/third_party/imgui/examples)
+    list(APPEND FASE_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/examples)
 
     # OpenGL
     find_package(OpenGL REQUIRED)
@@ -121,8 +121,8 @@ if (BUILD_EXAMPLE)
         set(GLFW_BUILD_TESTS OFF CACHE BOOL "")
         set(GLFW_BUILD_DOCS OFF CACHE BOOL "")
         set(GLFW_INSTALL OFF CACHE BOOL "")
-        add_subdirectory(${CMAKE_SOURCE_DIR}/third_party/glfw)
-        list(APPEND FASE_INCLUDE ${CMAKE_SOURCE_DIR}/third_party/glfw/include)
+        add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/glfw)
+        list(APPEND FASE_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/third_party/glfw/include)
         list(APPEND FASE_LIBRARY glfw)
         list(APPEND IMGUI_LIBRARY glfw)
     else()
@@ -133,28 +133,28 @@ if (BUILD_EXAMPLE)
 
     # ImGui
     add_library(imgui ${LINK_TYPE}
-        ${CMAKE_SOURCE_DIR}/third_party/imgui/imgui.cpp
-        ${CMAKE_SOURCE_DIR}/third_party/imgui/imgui_draw.cpp
-        ${CMAKE_SOURCE_DIR}/third_party/imgui/imgui_widgets.cpp
-        ${CMAKE_SOURCE_DIR}/third_party/imgui/examples/imgui_impl_glfw.cpp
-        ${CMAKE_SOURCE_DIR}/third_party/imgui/examples/imgui_impl_opengl3.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/imgui.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/imgui_draw.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/imgui_widgets.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/examples/imgui_impl_glfw.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/examples/imgui_impl_opengl3.cpp
     )
-    list(APPEND IMGUI_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/third_party/imgui/examples
-                                   ${CMAKE_SOURCE_DIR}/third_party/imgui/examples/libs/gl3w)
+    list(APPEND IMGUI_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/examples
+                                   ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/examples/libs/gl3w)
 
     setup_target_simple(imgui "${IMGUI_INCLUDE_DIRS}" "${IMGUI_LIBRARY}")
     list(APPEND FASE_LIBRARY imgui)
     list(APPEND FASE_INCLUDE ${IMGUI_INCLUDE_DIRS}
-                             ${CMAKE_SOURCE_DIR}/third_party/imgui/examples/libs/gl3w)
+                             ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/examples/libs/gl3w)
 
     # OpenCV
     find_package(OpenCV)
 else()
     # IMGUI
     add_library(imgui ${LINK_TYPE}
-        ${CMAKE_SOURCE_DIR}/third_party/imgui/imgui.cpp
-        ${CMAKE_SOURCE_DIR}/third_party/imgui/imgui_draw.cpp
-        ${CMAKE_SOURCE_DIR}/third_party/imgui/imgui_widgets.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/imgui.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/imgui_draw.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/imgui_widgets.cpp
     )
     setup_target_simple(imgui "${IMGUI_INCLUDE_DIRS}" "")
     list(APPEND FASE_INCLUDE ${IMGUI_INCLUDE_DIRS})
@@ -164,7 +164,7 @@ endif()
 if (BUILD_TEST)
     # Catch2
     list(APPEND FASE_INCLUDE
-                ${CMAKE_SOURCE_DIR}/third_party/Catch2/single_include)
+                ${CMAKE_CURRENT_SOURCE_DIR}/third_party/Catch2/single_include)
 endif()
 
 list(APPEND FASE_LIBRARY imgui)
@@ -175,29 +175,29 @@ list(APPEND FASE_LIBRARY imgui)
 
 # fase.so
 add_library(fase ${LINK_TYPE}
-    ${CMAKE_SOURCE_DIR}/src/fase.cpp
-    ${CMAKE_SOURCE_DIR}/src/core.cpp
-    ${CMAKE_SOURCE_DIR}/src/core_util.cpp
-    ${CMAKE_SOURCE_DIR}/src/type_utils.cpp
-    ${CMAKE_SOURCE_DIR}/src/dst_code.cpp
-    ${CMAKE_SOURCE_DIR}/src/editor_cli.cpp
-    ${CMAKE_SOURCE_DIR}/src/gui_editor/editor.cpp
-    ${CMAKE_SOURCE_DIR}/src/gui_editor/view.cpp
-    ${CMAKE_SOURCE_DIR}/src/gui_editor/popups.cpp
-    ${CMAKE_SOURCE_DIR}/src/gui_editor/menus.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/fase.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/core.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/core_util.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/type_utils.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/dst_code.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/editor_cli.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/gui_editor/editor.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/gui_editor/view.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/gui_editor/popups.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/gui_editor/menus.cpp
 )
 
 setup_target(fase "${FASE_INCLUDE}" "${FASE_LIBRARY}")
-list(APPEND FASE_INCLUDE ${CMAKE_SOURCE_DIR}/src)
+list(APPEND FASE_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/src)
 list(APPEND FASE_LIBRARY fase)
 
 # ----------------------------------- tests ------------------------------------
 if (BUILD_TEST)
     add_executable(fase_test
-        ${CMAKE_SOURCE_DIR}/test/test.cpp
-        ${CMAKE_SOURCE_DIR}/test/test_variable.cpp
-        ${CMAKE_SOURCE_DIR}/test/test_function.cpp
-        ${CMAKE_SOURCE_DIR}/test/test_core.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/test/test.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/test/test_variable.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/test/test_function.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/test/test_core.cpp
     )
     setup_target(fase_test "${FASE_INCLUDE}" "${FASE_LIBRARY}")
 endif()
@@ -206,20 +206,20 @@ endif()
 if (BUILD_EXAMPLE)
     # CLI Editor
     # add_executable(clieditor
-    #     ${CMAKE_SOURCE_DIR}/examples/clieditor/main.cpp
+    #     ${CMAKE_CURRENT_SOURCE_DIR}/examples/clieditor/main.cpp
     # )
     # setup_target(clieditor "${FASE_INCLUDE}" "${FASE_LIBRARY}")
 
     # GUI Editor
     add_executable(guieditor
-        ${CMAKE_SOURCE_DIR}/examples/guieditor/main.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/examples/guieditor/main.cpp
     )
     setup_target(guieditor "${FASE_INCLUDE}" "${FASE_LIBRARY}")
 
     # GUI Editor with OpenCV
     if (${OpenCV_FOUND})
         add_executable(guieditor_opencv
-            ${CMAKE_SOURCE_DIR}/examples/guieditor/main_opencv.cpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/examples/guieditor/main_opencv.cpp
         )
         list(APPEND FASE_INCLUDE ${OpenCV_INCLUDE_DIRS})  # Append OpenCV
         list(APPEND FASE_LIBRARY ${OpenCV_LIBS})
