--- a/.travis.yml
+++ b/.travis.yml
@@ -33,13 +33,13 @@ matrix:
       addons:
         apt:
           sources:
-            - llvm-toolchain-trusty-6.0
+            - llvm-toolchain-trusty-7
           packages:
-            - clang-6.0
+            - clang-7
             - cmake
             - libx11-dev libgl1-mesa-dev libglu1-mesa-dev libasound2-dev libgtk2.0-dev xorg-dev
       env:
-        - MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0"
+        - MATRIX_EVAL="CC=clang-7 && CXX=clang++-7"
 
     # Mac OS X
     - os: osx
@@ -49,8 +49,8 @@ before_install:
     - eval "${MATRIX_EVAL}"
 
 script:
-    - cmake . && make && make test
-    - cmake -DFASE_USE_CPP17=ON . && make && make test
+    - mkdir build && cd build && cmake .. && make && ./bin/test
+    - mkdir build17 && cd build17 && cmake -DFASE_USE_CPP17=ON .. && make && ./bin/test
 
 notifications:
   email:
