--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,16 +69,15 @@ elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
                          -Wctor-dtor-privacy -Wdisabled-optimization \
                          -Wformat=2 -Winit-self \
                          -Wmissing-declarations -Wmissing-include-dirs \
-                         -Wold-style-cast -Woverloaded-virtual \
-                         -Wredundant-decls -Wshadow -Wsign-conversion \
-                         -Wsign-promo  -Wno-old-style-cast\
+                         -Woverloaded-virtual -Wredundant-decls -Wshadow \
+                         -Wsign-conversion -Wsign-promo \
                          -Wstrict-overflow=5 -Wundef -Wno-unknown-pragmas")
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
     set(warning_options "--pedantic -Wall -Wextra -Wcast-align -Wcast-qual \
                          -Wctor-dtor-privacy -Wdisabled-optimization \
                          -Wformat=2 -Winit-self -Wlogical-op \
                          -Wmissing-declarations -Wmissing-include-dirs \
-                         -Wnoexcept -Wold-style-cast -Woverloaded-virtual \
+                         -Wnoexcept -Woverloaded-virtual \
                          -Wredundant-decls -Wshadow -Wsign-conversion \
                          -Wsign-promo -Wstrict-null-sentinel \
                          -Wstrict-overflow=5 -Wundef -Wno-unknown-pragmas")
