--- a/.travis.yml
+++ b/.travis.yml
@@ -32,14 +32,10 @@ matrix:
     - os: linux
       addons:
         apt:
-          sources:
-            - llvm-toolchain-trusty-7
           packages:
-            - clang-7
             - cmake
             - libx11-dev libgl1-mesa-dev libglu1-mesa-dev libasound2-dev libgtk2.0-dev xorg-dev
-      env:
-        - MATRIX_EVAL="CC=clang-7 && CXX=clang++-7"
+      compiler: clang++
 
     # Mac OS X
     - os: osx
@@ -49,8 +45,8 @@ before_install:
     - eval "${MATRIX_EVAL}"
 
 script:
-    - mkdir build && cd build && cmake .. && make && ./bin/test
-    - mkdir build17 && cd build17 && cmake -DFASE_USE_CPP17=ON .. && make && ./bin/test
+    - mkdir build && cd build && cmake .. && make VERBOSE=1 && ./bin/test
+    - mkdir ../build17 && cd ../build17 && cmake -DFASE_USE_CPP17=ON .. && make VERBOSE=1 && ./bin/test
 
 notifications:
   email:
