--- a/.travis.yml
+++ b/.travis.yml
@@ -46,10 +46,10 @@ before_install:
 
 script:
     - mkdir build && cd build
-    - cmake .. && make VERBOSE=1 && ./bin/test
+    - cmake .. && make VERBOSE=1 && ./bin/fase_test
     - cd ..
     - mkdir build17 && cd build17
-    - cmake -DFASE_USE_CPP17=ON .. && make VERBOSE=1 && ./bin/test
+    - cmake -DFASE_USE_CPP17=ON .. && make VERBOSE=1 && ./bin/fase_test
 
 notifications:
   email:
