--- a/.travis.yml
+++ b/.travis.yml
@@ -28,14 +28,17 @@ matrix:
     #         - libx11-dev libgl1-mesa-dev libglu1-mesa-dev libasound2-dev libgtk2.0-dev xorg-dev
     #   env:
     #     - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
-    # # works on Trusty
-    # - os: linux
-    #   addons:
-    #     apt:
-    #       packages:
-    #         - cmake
-    #         - libx11-dev libgl1-mesa-dev libglu1-mesa-dev libasound2-dev libgtk2.0-dev xorg-dev
-    #   compiler: clang++
+
+    # works on Trusty
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - llvm-toolchain-trusty-5.0
+          packages:
+            - cmake clang-5.0
+            - libx11-dev libgl1-mesa-dev libglu1-mesa-dev libasound2-dev libgtk2.0-dev xorg-dev
+      compiler: clang++-5.0
 
     # Mac OS X
     - os: osx
