--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ matrix:
             - g++-7
             - cmake
             - libx11-dev libgl1-mesa-dev libglu1-mesa-dev libasound2-dev libgtk2.0-dev xorg-dev
-      compiler: clang++-7
+      env:
+         - MATRIX_EVAL="CC=clang-7 && CXX=clang++-7"
 
     # Mac OS X
     - os: osx
